# wgpu-test

./: Cargo.toml  LICENSE  README.md  index.html  main.js  style.css
src/: main.rs  shader.wgsl  shader_post.wgsl  shader_text.wgsl
