[package]
name = "wgpu-test"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = { version = "25" }
winit = "0.30.11"
env_logger = "0.11.8"
log = "0.4.27"
pollster = "0.4.0"
anyhow = "1.0.98"
bytemuck = { version = "1.16", features = [ "derive" ] }
rand = "0.9.1"
imageproc = "0.25.0"
ab_glyph = "0.2.30"
